Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18097

sanity-pcc test_6: FAIL: mmap write data mismatch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • Ubuntu 24.04 client
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/fc29258e-8e5a-4b28-a13a-9d364a08d28c

      test_6 failed with the following error:

      Starting copytool 'agt1' on 'onyx-33vm2' with cmdline 'lhsmtool_posix --archive-format=v2 --hsm-root=/mnt/pcc.d6.sanity-pcc/d6.sanity-pcc --daemon --pid-file=/var/run/lhsmtool_posix.pid --archive 2  "/mnt/lustre"'
      CMD: onyx-33vm2 lhsmtool_posix --archive-format=v2 --hsm-root=/mnt/pcc.d6.sanity-pcc/d6.sanity-pcc --daemon --pid-file=/var/run/lhsmtool_posix.pid --archive 2  "/mnt/lustre" < /dev/null > "/autotest/autotest-1/2024-07-25/lustre-master_full-part-2_4558_92_c20ef393-2907-4ce6-ad68-9c63ccc315b7//sanity-pcc.test_6.copytool2_log.onyx-33vm2.log" 2>&1
      CMD: onyx-33vm2 /usr/sbin/lctl pcc add /mnt/lustre /mnt/pcc.d6.sanity-pcc/d6.sanity-pcc -p projid={100}\ rwid=2\ pccrw=1
      CMD: onyx-33vm2 /usr/bin/lfs pcc attach -w -i 2 /mnt/lustre/f6.sanity-pcc
      CMD: onyx-33vm2 /usr/bin/lfs pcc state /mnt/lustre/f6.sanity-pcc
      CMD: onyx-33vm2 multiop /mnt/lustre/f6.sanity-pcc OSMWUc
      CMD: onyx-33vm2 /usr/bin/lfs pcc state /mnt/lustre/f6.sanity-pcc
      CMD: onyx-33vm2 mmap_cat /mnt/lustre/f6.sanity-pcc
       sanity-pcc test_6: @@@@@@ FAIL: mmap write data mismatch: 
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4558 - 6.8.0-35-generic
      servers: https://build.whamcloud.com/job/lustre-master/4558 - 5.14.0-427.24.1_lustre.el9.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-pcc test_6 - $'mmap write data mismatch: 001'

            qian_wc Qian Yingjin
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: